--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
 
       <!-- Desktop Menu -->
       <div class="hidden md:flex items-center space-x-6">
-        <a href="#home" class="text-black hover:text-primary font-medium transition">Home</a>
-        <a href="#about" class="text-black hover:text-primary font-medium transition">About Us</a>
+        <a href="index.html" class="text-black hover:text-primary font-medium transition">Home</a>
+        <a href="About.html" class="text-black hover:text-primary font-medium transition">About Us</a>
         <a href="#services" class="text-black hover:text-primary font-medium transition">Services</a>
-        <a href="#booking" class="bg-primary text-white px-5 py-2 rounded-lg hover:bg-red-600 transition">Join Us</a>
+        <a href="joinus.html" class="bg-primary text-white px-5 py-2 rounded-lg hover:bg-red-600 transition">Join Us</a>
         <a href="#contact" class="text-black hover:text-primary font-medium transition">Contact Us</a>
         <a href="#login" class="border border-primary text-primary px-4 py-2 rounded-lg hover:bg-primary hover:text-white transition">Login</a>
       </div>
@@ -60,17 +60,17 @@
     <!-- Mobile Menu -->
     <div id="mobile-menu" class="hidden md:hidden pb-4">
       <div class="flex flex-col space-y-4">
-        <a href="#home" class="text-black hover:text-primary font-medium">Home</a>
-        <a href="#about" class="text-black hover:text-primary font-medium">About Us</a>
+        <a href="index.html" class="text-black hover:text-primary font-medium">Home</a>
+        <a href="About.html" class="text-black hover:text-primary font-medium">About Us</a>
         <a href="#services" class="text-black hover:text-primary font-medium">Services</a>
-        <a href="#booking" class="text-black hover:text-primary font-medium">Join Us</a>
+        <a href="joinus.html" class="text-black hover:text-primary font-medium">Join Us</a>
         <a href="#contact" class="text-black hover:text-primary font-medium">Contact Us</a>
         <a href="#login" class="text-black hover:text-primary font-medium">Login</a>
       </div>
     </div>
   </div>
 </nav>
-
+<!-- Hero section -->
   <section id="home" class="relative">
   <div class="slider-container">
     <div class="slider-track" id="slider-track">
@@ -659,7 +659,7 @@
     </script>
      <!-- Contact Section -->
     <div class="container mx-auto px-4 py-16">
-      <h2 class="text-4xl font-bold text-brown-dark mb-8 text-center">
+      <h2 class="text-4xl font-bold text-brown-dark mb-8 text-center" id="contact">
         Contact Us
       </h2>
       <p class="text-gray-600 text-center mb-12">
