--- a/joinus.html
+++ b/joinus.html
@@ -22,7 +22,7 @@
 </head>
 <body class="bg-white">
     <!-- Navigation -->
-   <nav class="bg-secondary shadow-lg sticky top-0 z-50">
+    <nav class="bg-secondary shadow-lg sticky top-0 z-50">
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="flex justify-between items-center py-4">
           <!-- ✅ Logo Section Fixed -->
@@ -53,7 +53,7 @@
             >
             <a
               href="joinus.html"
-              class="bg-primary text-white px-6 py-3 rounded-full font-semibold shadow-md hover:bg-red-600 transition duration-300 ease-in-out"
+              class="text-black hover:text-primary font-medium transition"
             >
               Join Us
             </a>
