--- a/login.html
+++ b/login.html
@@ -95,7 +95,7 @@
             >
             <a
               href="joinus.html"
-              class="bg-primary text-white px-6 py-3 rounded-full font-semibold shadow-md hover:bg-red-600 transition duration-300 ease-in-out"
+              class="text-black hover:text-primary font-medium transition"
             >
               Join Us
             </a>
