--- a/About.html
+++ b/About.html
@@ -339,7 +339,7 @@
     </section>
 
     <!-- Footer -->
-    <footer class="bg-black text-white py-10">
+  <footer class="bg-black text-white py-10">
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
           <!-- Logo and Description -->
@@ -366,28 +366,30 @@
             <h4 class="text-lg font-semibold mb-6 text-white">Company</h4>
             <ul class="space-y-3 text-gray-300">
               <li>
-                <a href="#about" class="hover:text-white transition-colors"
+                <a href="About.html" class="hover:text-white transition-colors"
                   >About Us</a
                 >
               </li>
               <li>
-                <a href="#career" class="hover:text-white transition-colors"
+                <a href="index.html#contact" class="hover:text-white transition-colors"
                   >Contact</a
                 >
               </li>
               <li>
-                <a href="#contact" class="hover:text-white transition-colors"
+                <a href="services.html" class="hover:text-white transition-colors"
                   >Services</a
                 >
               </li>
               <li>
-                <a href="#terms" class="hover:text-white transition-colors"
+                <a href="tearm&condition.html" class="hover:text-white transition-colors"
                   >Terms & Conditions</a
                 >
               </li>
               <li>
-                <a href="#refund" class="hover:text-white transition-colors"></a
-                >Join Us
+                <a href="privacy.html" class="hover:text-white transition-colors">Privacy Policy </a>
+              </li>
+              <li>
+                <a href="joinus.html" class="hover:text-white transition-colors">Join Us</a>
               </li>
             </ul>
           </div>
