--- a/joinus.html
+++ b/joinus.html
@@ -493,116 +493,90 @@
     </section>
 
     <!-- Footer -->
-        <footer class="bg-black text-white py-10">
-      <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-        <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-          <!-- Logo and Description -->
+  <footer class="bg-black text-white py-10">
+  <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+    <div class="grid grid-cols-1 md:grid-cols-3 gap-8 text-center md:text-left">
+      
+      <!-- Logo and Description -->
+      <div class="flex flex-col items-center md:items-start">
+        <div class="flex items-center justify-center md:justify-start space-x-3 mb-6">
+          <div class="text-4xl font-bold">
+            <span class="text-white">VY</span>
+          </div>
           <div>
-            <div class="flex items-center space-x-3 mb-6">
-              <div class="text-4xl font-bold">
-                <span class="text-white">VY</span>
-              </div>
-              <div>
-                <h3 class="text-2xl font-bold text-white">Vahan</h3>
-                <h3 class="text-2xl font-bold text-white -mt-2">Yojana</h3>
-              </div>
-            </div>
-            <p class="text-gray-300 mb-6 leading-relaxed">
-              Shiksh Gravity Foundation, the parent company of VahanYojana,
-              presents this innovative platform. Explore our diverse inventory,
-              and let us guide you towards finding the perfect ride to fuel your
-              adventures.
+            <h3 class="text-2xl font-bold text-white">Vahan</h3>
+            <h3 class="text-2xl font-bold text-white -mt-2">Yojana</h3>
+          </div>
+        </div>
+        <p class="text-gray-300 mb-6 leading-relaxed max-w-sm">
+          Shiksh Gravity Foundation, the parent company of VahanYojana,
+          presents this innovative platform. Explore our diverse inventory,
+          and let us guide you towards finding the perfect ride to fuel your
+          adventures.
+        </p>
+      </div>
+
+      <!-- Company Links -->
+      <div class="flex flex-col items-center md:items-start">
+        <h4 class="text-lg font-semibold mb-6 text-white">Company</h4>
+        <ul class="space-y-3 text-gray-300">
+          <li><a href="About.html" class="hover:text-white transition-colors">About Us</a></li>
+          <li><a href="index.html#contact" class="hover:text-white transition-colors">Contact</a></li>
+          <li><a href="services.html" class="hover:text-white transition-colors">Services</a></li>
+          <li><a href="tearm&condition.html" class="hover:text-white transition-colors">Terms & Conditions</a></li>
+          <li><a href="privacy.html" class="hover:text-white transition-colors">Privacy Policy</a></li>
+          <li><a href="joinus.html" class="hover:text-white transition-colors">Join Us</a></li>
+        </ul>
+      </div>
+
+      <!-- Contact Information -->
+      <div class="flex flex-col items-center md:items-start">
+        <h4 class="text-lg font-semibold mb-6 text-white">Contact us</h4>
+        <div class="space-y-4 text-gray-300 max-w-sm">
+          <div class="flex items-start justify-center md:justify-start space-x-3">
+            <i class="fas fa-map-marker-alt text-white mt-1"></i>
+            <p class="leading-relaxed">
+              Santswarup Complex / 2nd floor, Near Bank of Maharashtra, NH
+              30 - By Pass Cardanibagh, Anishabad, Patna(800002)
             </p>
           </div>
-
-          <!-- Company Links -->
-          <div>
-            <h4 class="text-lg font-semibold mb-6 text-white">Company</h4>
-            <ul class="space-y-3 text-gray-300">
-              <li>
-                <a href="About.html" class="hover:text-white transition-colors"
-                  >About Us</a
-                >
-              </li>
-              <li>
-                <a href="index.html#contact" class="hover:text-white transition-colors"
-                  >Contact</a
-                >
-              </li>
-              <li>
-                <a href="services.html" class="hover:text-white transition-colors"
-                  >Services</a
-                >
-              </li>
-              <li>
-                <a href="tearm&condition.html" class="hover:text-white transition-colors"
-                  >Terms & Conditions</a
-                >
-              </li>
-              <li>
-                <a href="privacy.html" class="hover:text-white transition-colors">Privacy Policy </a>
-              </li>
-              <li>
-                <a href="joinus.html" class="hover:text-white transition-colors">Join Us</a>
-              </li>
-            </ul>
+          <div class="flex items-center justify-center md:justify-start space-x-3">
+            <i class="fas fa-phone text-white"></i>
+            <p>011-6931-3444</p>
           </div>
-
-          <!-- Contact Information -->
-          <div>
-            <h4 class="text-lg font-semibold mb-6 text-white">Contact us</h4>
-            <div class="space-y-4 text-gray-300">
-              <div class="flex items-start space-x-3">
-                <i class="fas fa-map-marker-alt text-white mt-1"></i>
-                <p class="leading-relaxed">
-                  Santswarup Complex / 2nd floor, Near Bank of Maharashtra, NH
-                  30 - By Pass Cardanibagh, Anishabad, Patna(800002)
-                </p>
-              </div>
-              <div class="flex items-center space-x-3">
-                <i class="fas fa-phone text-white"></i>
-                <p>011-6931-3444</p>
-              </div>
-              <div class="flex items-center space-x-3">
-                <i class="fas fa-envelope text-white"></i>
-                <p>info@vahanyojana.com</p>
-              </div>
-            </div>
-            <div class="flex items-center space-x-1 text-gray-300 py-4">
-              <span class="text-sm">FOLLOW US</span>
-              <div class="w-8 h-px bg-gray-300 mx-2"></div>
-              <div class="flex space-x-3">
-                <a
-                  href="#"
-                  class="w-8 h-8 bg-white rounded-full flex items-center justify-center hover:bg-gray-200 transition-colors"
-                >
-                  <i class="fab fa-facebook-f text-black text-sm"></i>
-                </a>
-                <a
-                  href="#"
-                  class="w-8 h-8 bg-white rounded-full flex items-center justify-center hover:bg-gray-200 transition-colors"
-                >
-                  <i class="fab fa-instagram text-black text-sm"></i>
-                </a>
-                <a
-                  href="#"
-                  class="w-8 h-8 bg-white rounded-full flex items-center justify-center hover:bg-gray-200 transition-colors"
-                >
-                  <i class="fab fa-youtube text-black text-sm"></i>
-                </a>
-              </div>
-            </div>
+          <div class="flex items-center justify-center md:justify-start space-x-3">
+            <i class="fas fa-envelope text-white"></i>
+            <p>info@vahanyojana.com</p>
           </div>
         </div>
 
-        <!-- Copyright -->
-        <div class="border-t border-gray-700 mt-8 pt-6 text-center">
-          <p class="text-gray-400">
-            &copy; 2025 VahanYojana. All rights reserved.
-          </p>
+        <!-- Social Links -->
+        <div class="flex flex-col items-center md:items-start text-gray-300 py-4">
+          <div class="flex items-center space-x-1">
+            <span class="text-sm">FOLLOW US</span>
+            <div class="w-8 h-px bg-gray-300 mx-2"></div>
+          </div>
+          <div class="flex space-x-3 mt-2">
+            <a href="#" class="w-8 h-8 bg-white rounded-full flex items-center justify-center hover:bg-gray-200 transition-colors">
+              <i class="fab fa-facebook-f text-black text-sm"></i>
+            </a>
+            <a href="#" class="w-8 h-8 bg-white rounded-full flex items-center justify-center hover:bg-gray-200 transition-colors">
+              <i class="fab fa-instagram text-black text-sm"></i>
+            </a>
+            <a href="#" class="w-8 h-8 bg-white rounded-full flex items-center justify-center hover:bg-gray-200 transition-colors">
+              <i class="fab fa-youtube text-black text-sm"></i>
+            </a>
+          </div>
         </div>
       </div>
-    </footer>
+    </div>
+
+    <!-- Copyright -->
+    <div class="border-t border-gray-700 mt-8 pt-6 text-center">
+      <p class="text-gray-400">&copy; 2025 VahanYojana. All rights reserved.</p>
+    </div>
+  </div>
+</footer>
      <script src="aap.js"></script>
   </body>
 </html>
