--- a/About.html
+++ b/About.html
@@ -88,10 +88,10 @@
   <div class="absolute inset-0 hero-parallax"></div>
   <div class="relative z-10 text-center text-white max-w-4xl mx-auto px-4">
     <h1 class="text-4xl md:text-5xl lg:text-6xl font-bold mb-4">
-      About <span class="text-primaryYellow">Vahan Yojana</span>
+      वाहन योजना <span class="text-primaryYellow"> के बारे में</span>
     </h1>
     <p class="text-lg md:text-xl text-gray-200">
-      Your trusted partner in making car ownership dreams come true
+      आपका विश्वसनीय साथी — आपकी कार के सपनों को हकीकत बनाने में
     </p>
   </div>
 </section>
@@ -104,14 +104,14 @@
     <div class="grid grid-cols-1 lg:grid-cols-2 gap-12 items-center">
       <div class="fade-in">
         <h2 class="text-4xl font-bold text-primaryBlue mb-6">
-          Empowering Dreams Through
-          <span class="text-primaryYellow">Smart Financing</span>
+          स्मार्ट फाइनेंसिंग
+          <span class="text-primaryYellow">के ज़रिए सपनों को शक्ति देना</span>
         </h2>
         <p class="text-lg text-primaryBlack mb-6">
-          Founded in 2012, Vahan Yojana emerged from a simple yet powerful vision: to make car ownership accessible to every Indian family. What started as a small financial services company has grown into one of India's most trusted automotive financing platforms.
+          2012 में स्थापित, वाहन योजना एक सरल लेकिन सशक्त दृष्टि से जन्मी — हर भारतीय परिवार के लिए कार स्वामित्व को सुलभ बनाना।  एक छोटे से वित्तीय सेवा संस्थान के रूप में शुरू हुई यह पहल आज भारत के सबसे भरोसेमंद ऑटोमोबाइल फाइनेंसिंग प्लेटफ़ॉर्म्स में से एक बन चुकी है।  
         </p>
         <p class="text-lg text-primaryBlack mb-6">
-          We understand that buying a car is more than just a financial transaction – it's about freedom, convenience, and achieving life's important milestones. That's why we've dedicated ourselves to creating financing solutions that work for real people with real dreams.
+         हम समझते हैं कि कार खरीदना सिर्फ एक आर्थिक लेन-देन नहीं है — यह स्वतंत्रता, सुविधा और जीवन के महत्वपूर्ण पड़ावों को हासिल करने का प्रतीक है। इसी सोच के साथ, हम ऐसे वित्तीय समाधान प्रदान करने के लिए समर्पित हैं जो वास्तविक लोगों और उनके सच्चे सपनों के लिए काम करते हैं।
         </p>
       </div>
       <div class="fade-in fade-in-delay">
@@ -130,10 +130,10 @@
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
     <div class="text-center mb-16">
       <h2 class="text-4xl font-bold text-primaryBlue mb-4">
-        Our Impact in Numbers
+        आँकड़ों में हमारा प्रभाव
       </h2>
       <p class="text-xl text-primaryBlack">
-        Celebrating the trust and success of our customers across India
+        भारतभर में हमारे ग्राहकों के विश्वास और सफलता का जश्न
       </p>
     </div>
 
@@ -141,36 +141,35 @@
       <div class="text-center stats-counter">
         <div class="bg-white p-8 rounded-2xl shadow-md">
           <div class="text-5xl font-bold text-primaryYellow mb-3">50,000+</div>
-          <div class="text-primaryBlack font-semibold">Happy Customers</div>
+          <div class="text-primaryBlack font-semibold">खुश ग्राहक</div>
           <div class="text-sm text-gray-500 mt-2">
-            Families driving their dream cars
-          </div>
+सपनों की सवारी पर सवार परिवार          </div>
         </div>
       </div>
       <div class="text-center stats-counter">
         <div class="bg-white p-8 rounded-2xl shadow-md ">
           <div class="text-5xl font-bold text-primaryYellow mb-3">₹500Cr+</div>
-          <div class="text-primaryBlack font-semibold">Loans Disbursed</div>
+          <div class="text-primaryBlack font-semibold">स्वीकृत फाइनेंस</div>
           <div class="text-sm text-gray-500 mt-2">
-            Making dreams affordable
+           सपनों को बना रहे हैं किफ़ायती
           </div>
         </div>
       </div>
       <div class="text-center stats-counter">
         <div class="bg-white p-8 rounded-2xl shadow-md ">
           <div class="text-5xl font-bold text-primaryYellow mb-3">98.5%</div>
-          <div class="text-primaryBlack font-semibold">Customer Satisfaction</div>
+          <div class="text-primaryBlack font-semibold">ग्राहक संतुष्टि</div>
           <div class="text-sm text-gray-500 mt-2">
-            Excellence in service delivery
+            सेवा प्रदान में उत्कृष्टता
           </div>
         </div>
       </div>
       <div class="text-center stats-counter">
         <div class="bg-white p-8 rounded-2xl shadow-md  ">
           <div class="text-5xl font-bold text-primaryYellow mb-3">24 Hrs</div>
-          <div class="text-primaryBlack font-semibold">Average Approval</div>
+          <div class="text-primaryBlack font-semibold">औसत स्वीकृति</div>
           <div class="text-sm text-gray-500 mt-2">
-            Lightning-fast processing
+           बिजली-सी तेज़ प्रोसेसिंग
           </div>
         </div>
       </div>
@@ -183,10 +182,9 @@
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
     <!-- Section Title -->
     <div class="text-center mb-16">
-      <h2 class="text-4xl font-bold text-primaryBlue mb-4">Leadership Team</h2>
+      <h2 class="text-4xl font-bold text-primaryBlue mb-4">नेतृत्व टीम</h2>
       <p class="text-xl text-primaryBlack">
-        Meet the visionaries driving Vahan Yojana's success
-      </p>
+मिलिए उन दूरदर्शी नेताओं से, जो वाहन योजना की सफलता के पीछे हैं      </p>
     </div>
 
     <!-- Cards Grid -->
@@ -258,24 +256,24 @@
 <section class="py-20 bg-primaryWhite">
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
     <h2 class="text-4xl font-bold text-primaryBlue mb-6">
-      Ready to Get Your Car Loan?
+      क्या आप अपनी नई कार का सपना पूरा करने को तैयार हैं?
     </h2>
     <p class="text-xl text-primaryBlack/80 mb-10 max-w-2xl mx-auto">
-      Join thousands of satisfied customers who chose Vahan Yojana for their car financing needs.
+      हज़ारों संतुष्ट ग्राहकों ने जिस पर भरोसा किया — अब आपकी बारी है वाहन योजना से जुड़ने की।
     </p>
     <div class="flex flex-col sm:flex-row gap-4 justify-center">
       <a href="login.html">
         <button
           class="bg-primaryYellow text-primaryBlack px-8 py-3 rounded-lg font-semibold hover:bg-yellow-400 transition-all duration-300 transform hover:scale-105 shadow"
         >
-          Apply Now
+          अभी आवेदन करें
         </button>
       </a>
       <a href="index.html#calculator">
         <button
           class="border-2 border-primaryYellow text-primaryYellow px-8 py-3 rounded-lg font-semibold hover:bg-primaryYellow hover:text-primaryBlack transition-all duration-300 transform hover:scale-105"
         >
-          Calculate EMI
+          ईएमआई कैलकुलेटर
         </button>
       </a>
     </div>
@@ -301,10 +299,7 @@
           </div>
         </div>
         <p class="text-gray-300 mb-6 leading-relaxed max-w-sm">
-          Shiksh Gravity Foundation, the parent company of VahanYojana,
-          presents this innovative platform. Explore our diverse inventory,
-          and let us guide you towards finding the perfect ride to fuel your
-          adventures.
+          हमारे विविध वाहन विकल्पों को एक्सप्लोर करें, और अपनी अगली यात्रा के लिए उपयुक्त सवारी चुनने में हम आपकी मार्गदर्शना करेंगे।
         </p>
       </div>
 
