--- a/joinus.html
+++ b/joinus.html
@@ -95,9 +95,9 @@
 <section class="py-16 bg-primaryWhite">
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
     <div class="text-center mb-16">
-      <h2 class="text-4xl font-bold text-primaryBlue mb-4">Why Choose Vahan Yojana?</h2>
+      <h2 class="text-4xl font-bold text-primaryBlue mb-4">वाहन योजना क्यों चुनें?</h2>
       <p class="text-xl text-gray-700">
-        Join a company that values growth, innovation, and making dreams come true
+        एक ऐसी कंपनी से जुड़ें जो विकास, नवाचार और सपनों को साकार करने में विश्वास रखती है।
       </p>
     </div>
 
@@ -106,16 +106,16 @@
         <div class="bg-primaryBlue text-white p-4 rounded-full w-16 h-16 mx-auto mb-4 flex items-center justify-center">
           <i class="fas fa-chart-line text-2xl"></i>
         </div>
-        <h3 class="text-xl font-bold text-primaryBlue mb-3">Career Growth</h3>
-        <p class="text-gray-600">Accelerate your career with continuous learning opportunities and clear promotion paths.</p>
+        <h3 class="text-xl font-bold text-primaryBlue mb-3">करियर ग्रोथ</h3>
+        <p class="text-gray-600">निरंतर सीखने के अवसरों और स्पष्ट प्रमोशन मार्गों के साथ अपने करियर को तेज़ी से आगे बढ़ाएं।</p>
       </div>
 
       <div class="bg-white p-8 rounded-lg shadow text-center">
         <div class="bg-primaryBlue text-white p-4 rounded-full w-16 h-16 mx-auto mb-4 flex items-center justify-center">
           <i class="fas fa-handshake text-2xl"></i>
         </div>
-        <h3 class="text-xl font-bold text-primaryBlue mb-3">Great Culture</h3>
-        <p class="text-gray-600">Work in a collaborative environment that celebrates diversity and innovation.</p>
+        <h3 class="text-xl font-bold text-primaryBlue mb-3">उत्कृष्ट कार्य संस्कृति</h3>
+        <p class="text-gray-600">एक सहयोगात्मक माहौल में काम करें जहाँ विविधता और नवाचार का सम्मान होता है।</p>
       </div>
 
       <div class="bg-white p-8 rounded-lg shadow text-center">
@@ -134,8 +134,8 @@
 <section id="join" class="py-16 bg-white">
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
     <div class="text-center mb-16">
-      <h2 class="text-4xl font-bold text-primaryBlue mb-4">Open Positions</h2>
-      <p class="text-xl text-gray-700">Find your perfect role in our growing team</p>
+      <h2 class="text-4xl font-bold text-primaryBlue mb-4">उपलब्ध नौकरियाँ</h2>
+      <p class="text-xl text-gray-700">हमारी बढ़ती टीम में अपने लिए उपयुक्त भूमिका खोजें</p>
     </div>
 
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
@@ -146,14 +146,14 @@
             class="w-full h-48 object-cover">
         </div>
         <div class="p-6">
-          <h3 class="text-xl font-bold text-primaryBlue mb-2">Senior Loan Officer</h3>
-          <p class="text-gray-600 mb-4">Evaluate loan applications and guide customers through the approval process.</p>
+          <h3 class="text-xl font-bold text-primaryBlue mb-2">वरिष्ठ ऋण अधिकारी</h3>
+          <p class="text-gray-600 mb-4">आवेदन का मूल्यांकन करें और ग्राहकों को स्वीकृति प्रक्रिया में मार्गदर्शन दें।</p>
           <div class="flex items-center text-sm text-gray-500 mb-4">
             <i class="fas fa-map-marker-alt mr-2"></i>
             <span>Mumbai, Maharashtra</span>
           </div>
           <button class="w-full bg-primaryYellow text-primaryBlack py-2 rounded-lg font-semibold hover:bg-primaryRed  hover:text-white transition-colors">
-            Apply Now
+            आवेदन करें
           </button>
         </div>
       </div>
@@ -263,9 +263,9 @@
     <!-- Header Section -->
     <div class="text-center mb-16">
       <h2 class="text-4xl font-bold text-primaryBlue mb-4 tracking-tight">
-        Apply Now
+        आवेदन करें
         <span class="block text-lg font-normal text-gray-600 mt-2">
-          Take the first step towards your new career
+अपने नए करियर की ओर पहला कदम बढ़ाएं।
         </span>
       </h2>
       <div class="w-24 h-1 bg-primaryYellow mx-auto rounded-full"></div>
@@ -284,7 +284,7 @@
               <div class="w-8 h-8 bg-primaryBlue/10 rounded-full flex items-center justify-center">
                 <i class="fas fa-user text-primaryBlue text-sm"></i>
               </div>
-              <h3 class="text-xl font-semibold text-primaryBlue">Personal Information</h3>
+              <h3 class="text-xl font-semibold text-primaryBlue">व्यक्तिगत जानकारी</h3>
             </div>
 
             <!-- Name Fields -->
@@ -292,7 +292,7 @@
               <div>
                 <label class="block text-sm font-semibold text-gray-700 mb-2 flex items-center">
                   <i class="fas fa-user-circle text-primaryBlue mr-2"></i>
-                  First Name
+                  पहला नाम
                 </label>
                 <input type="text"
                   class="w-full px-4 py-3 border-2 border-gray-200 rounded-xl focus:ring-4 focus:ring-primaryBlue/20 focus:border-primaryBlue transition-all duration-300 bg-gray-50/50 placeholder-gray-400"
@@ -301,7 +301,7 @@
               <div>
                 <label class="block text-sm font-semibold text-gray-700 mb-2 flex items-center">
                   <i class="fas fa-user-circle text-primaryBlue mr-2"></i>
-                  Last Name
+                  अंतिम नाम
                 </label>
                 <input type="text"
                   class="w-full px-4 py-3 border-2 border-gray-200 rounded-xl focus:ring-4 focus:ring-primaryBlue/20 focus:border-primaryBlue transition-all duration-300 bg-gray-50/50 placeholder-gray-400"
@@ -314,7 +314,7 @@
               <div>
                 <label class="block text-sm font-semibold text-gray-700 mb-2 flex items-center">
                   <i class="fas fa-envelope text-primaryBlue mr-2"></i>
-                  Email Address
+                  ईमेल पता
                 </label>
                 <input type="email"
                   class="w-full px-4 py-3 border-2 border-gray-200 rounded-xl focus:ring-4 focus:ring-primaryBlue/20 focus:border-primaryBlue transition-all duration-300 bg-gray-50/50 placeholder-gray-400"
@@ -323,7 +323,7 @@
               <div>
                 <label class="block text-sm font-semibold text-gray-700 mb-2 flex items-center">
                   <i class="fas fa-phone text-primaryBlue mr-2"></i>
-                  Phone Number
+                  फ़ोन नंबर
                 </label>
                 <input type="tel"
                   class="w-full px-4 py-3 border-2 border-gray-200 rounded-xl focus:ring-4 focus:ring-primaryBlue/20 focus:border-primaryBlue transition-all duration-300 bg-gray-50/50 placeholder-gray-400"
@@ -338,14 +338,14 @@
               <div class="w-8 h-8 bg-primaryBlue/10 rounded-full flex items-center justify-center">
                 <i class="fas fa-briefcase text-primaryBlue text-sm"></i>
               </div>
-              <h3 class="text-xl font-semibold text-primaryBlue">Professional Details</h3>
+              <h3 class="text-xl font-semibold text-primaryBlue">व्यावसायिक विवरण</h3>
             </div>
 
             <!-- Position -->
             <div>
               <label class="block text-sm font-semibold text-gray-700 mb-2 flex items-center">
                 <i class="fas fa-user-tie text-primaryBlue mr-2"></i>
-                Position Applied For
+                आवेदन किए गए पद
               </label>
               <select
                 class="w-full px-4 py-3 border-2 border-gray-200 rounded-xl focus:ring-4 focus:ring-primaryBlue/20 focus:border-primaryBlue transition-all duration-300 bg-gray-50/50 text-gray-700">
@@ -363,7 +363,7 @@
             <div>
               <label class="block text-sm font-semibold text-gray-700 mb-2 flex items-center">
                 <i class="fas fa-chart-line text-primaryBlue mr-2"></i>
-                Experience Level
+                अनुभव स्तर
               </label>
               <select
                 class="w-full px-4 py-3 border-2 border-gray-200 rounded-xl focus:ring-4 focus:ring-primaryBlue/20 focus:border-primaryBlue transition-all duration-300 bg-gray-50/50 text-gray-700">
@@ -383,14 +383,14 @@
               <div class="w-8 h-8 bg-primaryBlue/10 rounded-full flex items-center justify-center">
                 <i class="fas fa-file-alt text-primaryBlue text-sm"></i>
               </div>
-              <h3 class="text-xl font-semibold text-primaryBlue">Additional Information</h3>
+              <h3 class="text-xl font-semibold text-primaryBlue">अतिरिक्त जानकारी</h3>
             </div>
 
             <!-- Cover Letter -->
             <div>
               <label class="block text-sm font-semibold text-gray-700 mb-2 flex items-center">
                 <i class="fas fa-pen-fancy text-primaryBlue mr-2"></i>
-                Cover Letter
+                संदेश
               </label>
               <textarea rows="5"
                 class="w-full px-4 py-3 border-2 border-gray-200 rounded-xl focus:ring-4 focus:ring-primaryBlue/20 focus:border-primaryBlue transition-all duration-300 bg-gray-50/50 resize-none placeholder-gray-400"
@@ -401,16 +401,16 @@
             <div>
               <label class="block text-sm font-semibold text-gray-700 mb-2 flex items-center">
                 <i class="fas fa-cloud-upload-alt text-primaryBlue mr-2"></i>
-                Upload Resume
+                रिज़्यूमे अपलोड करेंe
               </label>
               <div
                 class="border-2 border-dashed border-gray-300 rounded-lg p-4 text-center hover:border-primaryBlue hover:bg-primaryBlue/5 transition-all duration-300 cursor-pointer">
                 <div class="w-10 h-10 bg-primaryBlue/10 rounded-full flex items-center justify-center mx-auto mb-2">
                   <i class="fas fa-cloud-upload-alt text-lg text-primaryBlue"></i>
                 </div>
-                <p class="text-sm font-medium text-gray-700 mb-1">Drag and drop your resume here</p>
+                <p class="text-sm font-medium text-gray-700 mb-1">अपना रिज़्यूमे यहाँ ड्रैग और</p>
                 <p class="text-xs text-gray-500 mb-2">
-                  or <span class="text-primaryBlue font-semibold hover:underline">click to browse files</span>
+                  <span class="text-primaryBlue font-semibold hover:underline">ड्रॉप करें या फ़ाइलें ब्राउज़ करने के लिए क्लिक करें।</span>
                 </p>
                 <div class="flex items-center justify-center space-x-3 text-xs text-gray-400">
                   <span class="flex items-center"><i class="fas fa-file-pdf mr-1"></i> PDF</span>
